Add enrollments and further i18n and add photos and add interviewer role

--- a/app/views/children/_form.html.erb
+++ b/app/views/children/_form.html.erb
@@ -1,8 +1,7 @@
 <%= form_for(@child) do |f| %>
   <% if @child.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@child.errors.count, "error") %> prohibited this child from being saved:</h2>
-
+      <h2><%= tr("record_not_saved") %></h2>
       <ul>
       <% @child.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -12,10 +11,10 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :code, t('code') %><br>
+    <%= f.label :code, tr('code') %><br>
     <%= f.text_field :code %>
     <% if @child.family.try(:community).try(:id) %>
-    <span style="font-size: 10px"><%= link_to t('next_code'), {controller: :communities, action: :next_code, id: @child.family.try(:community).try(:id)}, {"target" => "_blank"} %></span>
+    <span style="font-size: 10px"><%= link_to tr('next_code'), {controller: :communities, action: :next_code, id: @child.family.try(:community).try(:id)}, {"target" => "_blank"} %></span>
     <% end %>
   </div>
 
@@ -24,52 +23,56 @@
   families_array = Family.all.includes(:community).order("communities.name ASC", "families.name ASC").map{|f| ["#{f.community.try(:code)} - #{f.name}", f.id]}
   families_array.insert(0, ["", nil])
   %>
-  <%= f.label :family_id, t('family') %><br><%= f.select(:family_id, families_array) %>
+  <%= f.label :family_id, tr('family') %><br><%= f.select(:family_id, families_array) %>
   </div>
   <div style="clear:both;"></div>
   <div class="field float">
-    <%= f.label :family_name1, t("family_name1") %><br>
+    <%= f.label :family_name1, tr("family_name1") %><br>
     <%= f.text_field :family_name1 %>
   </div>
   <div class="field float">
-    <%= f.label :family_name2, t("family_name2") %><br>
+    <%= f.label :family_name2, tr("family_name2") %><br>
     <%= f.text_field :family_name2 %>
   </div>
   <div class="field float">
-    <%= f.label :given_name1, t("given_name_1") %><br>
+    <%= f.label :given_name1, tr("given_name1") %><br>
     <%= f.text_field :given_name1 %>
   </div>
   <div class="field float">
-    <%= f.label :given_name2, t("given_name_2") %><br>
+    <%= f.label :given_name2, tr("given_name2") %><br>
     <%= f.text_field :given_name2 %>
   </div>
   <div class="field float">
-    <%= f.label :preferred_name, t("preferred_name") %><br>
+    <%= f.label :preferred_name, tr("preferred_name") %><br>
     <%= f.text_field :preferred_name %>
   </div>
   <div style="clear:both;"></div>
   <div class="field">
-    <%= f.label :dob, t("date_of_birth") %><br>
-    <%= f.date_select :dob, start_year: 1970, end_year: Date.today.year %>
+    <%= f.label :dob, tr("date_of_birth") %><br>
+    <%= f.date_select :dob, start_year: 1970, end_year: Date.today.year,
+                      use_month_names: [tr("month.jan"), tr("month.feb"), tr("month.mar"),
+                                        tr("month.apr"), tr("month.may"), tr("month.jun"),
+                                        tr("month.jul"), tr("month.aug"), tr("month.sep"),
+                                        tr("month.oct"), tr("month.nov"), tr("month.dec")] %>
   </div>
   <div style="clear:both;"></div>
   <div class="field float">
   <%
-  statuses_array = Child::STATUSES_ARRAY.dup
+  statuses_array = Child.status_to_code(self)
   statuses_array.insert(0, ["", nil])
   %>
-  <%= f.label :status, t('status') %><br><%= f.select(:status, statuses_array) %>
+  <%= f.label :status, tr('status') %><br><%= f.select(:status, statuses_array) %>
   </div>
   <div class="field float">
   <%
-  genders_array = Child::GENDERS_ARRAY.dup
+  genders_array = Child.gender_to_code(self)
   genders_array.insert(0, ["", nil])
   %>
-  <%= f.label :gender, t('gender') %><br><%= f.select(:gender, genders_array) %>
+  <%= f.label :gender, tr('gender') %><br><%= f.select(:gender, genders_array) %>
   </div>
   <div style="clear:both;"></div>
   <div class="field">
-    <%= f.label :notes, t('notes') %><br>
+    <%= f.label :notes, tr('notes') %><br>
     <%= f.text_area :notes, cols: 40, rows: 5 %>
   </div>
 
