--- a/app/views/children/index.html.erb
+++ b/app/views/children/index.html.erb
@@ -1,18 +1,18 @@
-<%= link_to 'New', new_child_path %> | <%= link_to 'Home', {controller: :welcome, action: :index} %>
+<%= link_to tr('new'), new_child_path %> | <%= link_to tr('home'), {controller: :welcome, action: :index} %>
 
-<h1>Children</h1>
+<h1><%= tr('children') %></h1>
 
 <table>
   <thead>
     <tr>
-      <th><%= t('code') %></th>
-      <th><%= t('family') %></th>
-      <th><%= t('family_names') %></th>
-      <th><%= t('given_names') %></th>
-      <th><%= t('preferred_name') %></th>
-      <th><%= t('date_of_birth') %></th>
-      <th><%= t('status') %></th>
-      <th><%= t('gender') %></th>
+      <th><%= tr('code') %></th>
+      <th><%= tr('family') %></th>
+      <th><%= tr('family_names') %></th>
+      <th><%= tr('given_names') %></th>
+      <th><%= tr('preferred_name') %></th>
+      <th><%= tr('date_of_birth') %></th>
+      <th><%= tr('status') %></th>
+      <th><%= tr('gender') %></th>
       <th></th>
     </tr>
   </thead>
@@ -26,9 +26,9 @@
         <td><%= child.given_name1 %> <%= child.given_name2 %></td>
         <td><%= child.preferred_name %></td>
         <td><%= child.dob %></td>
-        <td><%= Child::STATUSES_MAP[child.status] %></td>
-        <td><%= Child::GENDERS_MAP[child.gender] %></td>
-        <td><%= link_to t('show'), child %></td>
+        <td><%= Child::code_to_status(self)[child.status] %></td>
+        <td><%= Child::code_to_gender(self)[child.gender] %></td>
+        <td><%= link_to tr('show'), child %></td>
       </tr>
     <% end %>
   </tbody>
