--- a/app/views/communities/next_code.html.erb
+++ b/app/views/communities/next_code.html.erb
@@ -1,13 +1,13 @@
-<h1>Community</h1>
+<h1><%= tr('community') %></h1>
 
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong><%= tr('name') %>:</strong>
   <%= @community.name %>
 </p>
 
 <p>
-  <strong>Next Code:</strong>
+  <strong><%= tr('next_code') %>:</strong>
   <%= @community.code %><%= @next_code %>
 </p>
