--- a/app/views/family_years/edit.html.erb
+++ b/app/views/family_years/edit.html.erb
@@ -1,10 +1,10 @@
-<%= link_to 'Show', family_year_path(@family_year) %> |
-<%= link_to 'Home', {controller: :welcome, action: :index} %> |
-<%= link_to 'Family', @family_year.family %>
+<%= link_to tr('show'), family_year_path(@family_year) %> |
+<%= link_to tr('home'), {controller: :welcome, action: :index} %> |
+<%= link_to tr('family'), @family_year.family %>
 
-<h1>Editing Family Year</h1>
+<h1><%= tr('family_year') %></h1>
 
 <%= render 'form' %>
 <% if @user && @user.can_delete_record? %>
-<div class="delete-record"><%= link_to t('destroy'), @family_year, method: :delete, data: { confirm: t('confirm_destroy') } %></div>
+<div class="delete-record"><%= link_to tr('destroy'), @family_year, method: :delete, data: { confirm: tr('confirm_destroy') } %></div>
 <% end %>
