--- a/app/views/guardians/index.html.erb
+++ b/app/views/guardians/index.html.erb
@@ -1,17 +1,17 @@
-<%= link_to 'New', new_guardian_path %> | <%= link_to 'Home', {controller: :welcome, action: :index} %>
+<%= link_to tr('new'), new_guardian_path %> | <%= link_to tr('home'), {controller: :welcome, action: :index} %>
 
-<h1>Guardians</h1>
+<h1><%= tr("guardians") %></h1>
 
 <table border=1 cellpadding=10>
   <thead>
     <tr>
-      <th>Family</th>
-      <th>Family Names</th>
-      <th>Given Names</th>
-      <th>Preferred Name</th>
-      <th>Relationship</th>
-      <th>Active</th>
-      <th>Primary</th>
+      <th><%= tr('family') %></th>
+      <th><%= tr('family_names') %></th>
+      <th><%= tr('given_names') %></th>
+      <th><%= tr('preferred_name') %></th>
+      <th><%= tr('relationship') %></th>
+      <th><%= tr('active') %></th>
+      <th><%= tr('primary') %></th>
       <th></th>
     </tr>
   </thead>
@@ -23,10 +23,10 @@
         <td><%= guardian.family_name1 %> <%= guardian.family_name2 %></td>
         <td><%= guardian.given_name1 %> <%= guardian.given_name2 %></td>
         <td><%= guardian.preferred_name %></td>
-        <td><%= Guardian::RELATIONSHIPS_MAP[guardian.relationship] %></td>
-        <td><%= guardian.active %></td>
-        <td><%= guardian.primary %></td>
-        <td><%= link_to 'Show', guardian %></td>
+        <td><%= Guardian.code_to_relationship(self)[guardian.relationship] %></td>
+        <td><%= guardian.active ? tr('bool.true') : tr('bool.false') %></td>
+        <td><%= guardian.primary ? tr('bool.true') : tr('bool.false') %></td>
+        <td><%= link_to tr('show'), guardian %></td>
       </tr>
     <% end %>
   </tbody>
