--- a/app/views/sponsors/show.html.erb
+++ b/app/views/sponsors/show.html.erb
@@ -1,81 +1,81 @@
-<%= link_to 'Edit', edit_sponsor_path(@sponsor) %> |
-<%= link_to 'Home', {controller: :welcome, action: :index} %> |
-<%= link_to 'Sponsors', {controller: :sponsors, action: :index} %>
+<%= link_to tr('edit'), edit_sponsor_path(@sponsor) %> |
+<%= link_to tr('home'), {controller: :welcome, action: :index} %> |
+<%= link_to tr('sponsors'), {controller: :sponsors, action: :index} %>
 
-<h1>Sponsor</h1>
+<h1><%= tr('sponsor') %></h1>
 
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Code:</strong>
+  <strong><%= tr('code') %>:</strong>
   <%= @sponsor.code %>
 </p>
 
 <p>
-  <strong>Donor Number:</strong>
+  <strong><%= tr('donor_number') %>:</strong>
   <%= @sponsor.donor_number %>
 </p>
 
 <p>
-  <strong>Link:</strong>
+  <strong><%= tr('link') %>:</strong>
   <%= @sponsor.link %>
 </p>
 
 <p>
-  <strong>Given Name:</strong>
+  <strong><%= tr('given_name') %>:</strong>
   <%= @sponsor.given_name %>
 </p>
 
 <p>
-  <strong>Family Name:</strong>
+  <strong><%= tr('family_name') %>:</strong>
   <%= @sponsor.family_name %>
 </p>
 
 <p>
-  <strong>Street Address:</strong>
+  <strong><%= tr('street_address') %>:</strong>
   <%= @sponsor.street_address %>
 </p>
 
 <p>
-  <strong>City:</strong>
+  <strong><%= tr('city') %>:</strong>
   <%= @sponsor.city %>
 </p>
 
 <p>
-  <strong>Postal Code:</strong>
+  <strong><%= tr('postal_code') %>:</strong>
   <%= @sponsor.postal_code %>
 </p>
 
 <p>
-  <strong>Primary Email:</strong>
+  <strong><%= tr('primary_email') %>:</strong>
   <%= @sponsor.primary_email %>
 </p>
 
 <p>
-  <strong>Secondary Email:</strong>
+  <strong><%= tr('secondary_email') %>:</strong>
   <%= @sponsor.secondary_email %>
 </p>
 
 <p>
-  <strong>Primary Phone:</strong>
+  <strong><%= tr('primary_phone') %>:</strong>
   <%= @sponsor.primary_phone %>
 </p>
 
 <p>
-  <strong>Secondary Phone:</strong>
+  <strong><%= tr('secondary_phone') %>:</strong>
   <%= @sponsor.secondary_phone %>
 </p>
 <br>
 
-<h3>Sponsorships</h3>
-<%= link_to 'New', {controller: :sponsorships, action: :new, sponsor_id: @sponsor.id} %>
+<h3><%= tr('sponsorships') %></h3>
+<%= link_to tr('new'), {controller: :sponsorships, action: :new, sponsor_id: @sponsor.id} %>
 
 <% if @sponsorships.present? %>
 <table>
   <thead>
     <tr>
-      <th>School Year</th>
-      <th>Number of Children</th>
+      <th><%= tr('school_year') %></th>
+      <th><%= tr('number_children') %></th>
       <th></th>
     </tr>
   </thead>
@@ -85,7 +85,7 @@
       <tr>
         <td><%= sponsorship.school_year %></td>
         <td><%= sponsorship.number_children %></td>
-        <td><%= link_to 'Show', sponsorship %></td>
+        <td><%= link_to tr('show'), sponsorship %></td>
       </tr>
     <% end %>
   </tbody>
