--- a/app/views/sponsorships/show.html.erb
+++ b/app/views/sponsorships/show.html.erb
@@ -1,27 +1,27 @@
-<%= link_to 'Edit', edit_sponsorship_path(@sponsorship) %> |
-<%= link_to 'Home', {controller: :welcome, action: :index} %> |
-<%= link_to 'Sponsor', @sponsor %>
+<%= link_to tr('edit'), edit_sponsorship_path(@sponsorship) %> |
+<%= link_to tr('home'), {controller: :welcome, action: :index} %> |
+<%= link_to tr('sponsor'), @sponsor %>
 
-<h1>Sponsorship</h1>
+<h1><%= tr('sponsorship') %></h1>
 
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>School Year:</strong>
+  <strong><%= tr('school_year') %>:</strong>
   <%= @sponsorship.school_year %>
 </p>
 
 <p>
-  <strong>Sponsor:</strong>
+  <strong><%= tr('sponsor') %>:</strong>
   <%= link_to "#{@sponsor.try(:code)} - #{@sponsor.try(:given_name)} #{@sponsor.try(:family_name)}", @sponsor %>
 </p>
 
 <p>
-  <strong>Number of Children:</strong>
+  <strong><%= tr('number_children') %>:</strong>
   <%= @sponsorship.number_children %>
 </p>
 
 <p>
-  <strong>Dollar Amount:</strong>
+  <strong><%= tr('dollar_amount') %>:</strong>
   <%= @sponsorship.dollar_amount %>
 </p>
