--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -1,7 +1,7 @@
-<%= link_to 'Show', @child %> | <%= link_to 'Home', {controller: :welcome, action: :index} %>
-<h1>Child</h1>
+<%= link_to tr('show'), @child %> | <%= link_to tr('home'), {controller: :welcome, action: :index} %>
+<h1><%= tr("child") %></h1>
 
 <%= render 'form' %>
 <% if @user && @user.can_delete_record? %>
-<div class="delete-record"><%= link_to t('destroy'), @child, method: :delete, data: { confirm: t('confirm_destroy') } %></div>
+<div class="delete-record"><%= link_to tr('destroy'), @child, method: :delete, data: { confirm: tr('confirm_destroy') } %></div>
 <% end %>
