--- a/app/views/children/new.html.erb
+++ b/app/views/children/new.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Home', {controller: :welcome, action: :index} %>
-<h1>New Child</h1>
+<%= link_to tr('home'), {controller: :welcome, action: :index} %>
+<h1><%= tr("new_child") %></h1>
 
 <%= render 'form' %>
