--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -1,52 +1,78 @@
-<%= link_to 'Edit', edit_child_path(@child) %> |
-<%= link_to 'Home', {controller: :welcome, action: :index} %> |
-<%= link_to 'Family', @child.family %>
+<%= link_to tr('edit'), edit_child_path(@child) %> |
+<%= link_to tr('home'), {controller: :welcome, action: :index} %> |
+<%= link_to tr('family'), @child.family %>
 
-<h1><%=t('child')%></h1>
+<h1><%=tr('child')%></h1>
 
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong><%=t('code')%>:</strong>
+  <strong><%=tr('code')%>:</strong>
   <%= @child.code %>
 </p>
 
 <p>
-  <strong><%=t('family')%>:</strong>
+  <strong><%=tr('family')%>:</strong>
   <%= link_to "#{@child.family.try(:community).try(:code)} - #{@child.family.try(:name)}", @child.family %>
 </p>
 
 <p>
-  <strong><%=t('family_names')%>:</strong>
+  <strong><%=tr('family_names')%>:</strong>
   <%= @child.family_name1 %> <%= @child.family_name2 %>
 </p>
 
 <p>
-  <strong><%=t('given_names')%>:</strong>
+  <strong><%=tr('given_names')%>:</strong>
   <%= @child.given_name1 %> <%= @child.given_name2 %>
 </p>
 
 <p>
-  <strong><%=t('preferred_name')%>:</strong>
+  <strong><%=tr('preferred_name')%>:</strong>
   <%= @child.preferred_name %>
 </p>
 
 <p>
-  <strong><%=t('date_of_birth')%>:</strong>
+  <strong><%=tr('date_of_birth')%>:</strong>
   <%= @child.dob %>
 </p>
 
 <p>
-  <strong><%=t('status')%>:</strong>
-  <%= Child::STATUSES_MAP[@child.status] %>
+  <strong><%=tr('status')%>:</strong>
+  <%= Child.code_to_status(self)[@child.status] %>
 </p>
 
 <p>
-  <strong><%=t('gender')%>:</strong>
-  <%= Child::GENDERS_MAP[@child.gender] %>
+  <strong><%=tr('gender')%>:</strong>
+  <%= Child.code_to_gender(self)[@child.gender] %>
 </p>
 
 <p>
-  <strong><%=t('notes')%>:</strong>
+  <strong><%=tr('notes')%>:</strong>
   <%= @child.notes %>
 </p>
+
+<br>
+
+<h3><%= tr('enrollments') %></h3>
+<%= link_to tr('new'), {controller: :enrollments, action: :new, child_id: @child.id} %>
+
+<% if @enrollments.present? %>
+<table>
+  <thead>
+    <tr>
+      <th><%= tr("school_year") %></th>
+      <th colspan="1"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @enrollments.each do |enrollment| %>
+      <tr>
+        <td><%= enrollment.school_year %></td>
+        <td><%= link_to tr('show'), enrollment %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<% end %>
