--- a/app/views/communities/_form.html.erb
+++ b/app/views/communities/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@community) do |f| %>
   <% if @community.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@community.errors.count, "error") %> prohibited this community from being saved:</h2>
+      <h2><%= tr("record_not_saved") %></h2>
 
       <ul>
       <% @community.errors.full_messages.each do |message| %>
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :code, t("code") %><br>
+    <%= f.label :code, tr("code") %><br>
     <%= f.text_field :code %>
   </div>
   <div class="field">
-    <%= f.label :name, t("name") %><br>
+    <%= f.label :name, tr("name") %><br>
     <%= f.text_field :name %>
   </div>
   <div class="actions">
