--- a/app/views/communities/new.html.erb
+++ b/app/views/communities/new.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Home', {controller: :welcome, action: :index} %>
-<h1>New Community</h1>
+<%= link_to tr('home'), {controller: :welcome, action: :index} %>
+<h1><%= tr('new_community') %></h1>
 
 <%= render 'form' %>
