--- a/app/views/families/_form.html.erb
+++ b/app/views/families/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@family) do |f| %>
   <% if @family.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@family.errors.count, "error") %> prohibited this family from being saved:</h2>
+      <h2><%= tr("record_not_saved") %></h2>
 
       <ul>
       <% @family.errors.full_messages.each do |message| %>
@@ -15,15 +15,15 @@
   communities_array = Community.all.order(code: :asc).map{|c| ["#{c.code} #{c.name}", c.id]}
   communities_array.insert(0, ["", nil])
   %>
-  <%= f.label :community_id, 'Community' %><br><%= f.select(:community_id, communities_array) %>
+  <%= f.label :community_id, tr('community') %><br><%= f.select(:community_id, communities_array) %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :name, tr("name") %><br>
     <%= f.text_field :name %>
   </div>
 
   <div class="field">
-    <%= f.label :notes %><br>
+    <%= f.label :notes, tr("notes") %><br>
     <%= f.text_area :notes, cols: 40, rows: 5%>
   </div>
   <div class="actions">
