--- a/app/views/families/new.html.erb
+++ b/app/views/families/new.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Home', {controller: :welcome, action: :index} %>
-<h1>New Family</h1>
+<%= link_to tr('home'), {controller: :welcome, action: :index} %>
+<h1><%= tr('new_family') %></h1>
 
 <%= render 'form' %>
