--- a/app/views/family_years/new.html.erb
+++ b/app/views/family_years/new.html.erb
@@ -1,6 +1,6 @@
-<%= link_to 'Home', {controller: :welcome, action: :index} %> |
-<%= link_to 'Family', @family_year.family %>
+<%= link_to tr('home'), {controller: :welcome, action: :index} %> |
+<%= link_to tr('family'), @family_year.family %>
 
-<h1>New Family Year</h1>
+<h1><%= tr("new_family_year") %></h1>
 
 <%= render 'form' %>
