--- a/app/views/sponsors/edit.html.erb
+++ b/app/views/sponsors/edit.html.erb
@@ -1,8 +1,8 @@
-<%= link_to 'Show', @sponsor %> | <%= link_to 'Home', {controller: :welcome, action: :index} %>
+<%= link_to tr('show'), @sponsor %> | <%= link_to tr('home'), {controller: :welcome, action: :index} %>
 
-<h1>Sponsor</h1>
+<h1><%= tr('sponsor') %></h1>
 
 <%= render 'form' %>
-<% if @user && @user.can_delete_record? %>
-<div class="delete-record"><%= link_to t('destroy'), @sponsor, method: :delete, data: { confirm: t('confirm_destroy') } %></div>
+<% if @user && @user.can_delete_sponsor_record? %>
+<div class="delete-record"><%= link_to tr('destroy'), @sponsor, method: :delete, data: { confirm: tr('confirm_destroy') } %></div>
 <% end %>
