--- a/app/views/sponsors/new.html.erb
+++ b/app/views/sponsors/new.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Home', {controller: :welcome, action: :index} %>
-<h1>New Sponsor</h1>
+<%= link_to tr('home'), {controller: :welcome, action: :index} %>
+<h1><%= tr("new_sponsor") %></h1>
 
 <%= render 'form' %>
