--- a/app/views/welcome/impressum.html
+++ b/app/views/welcome/impressum.html
@@ -1,5 +1,5 @@
-<%= link_to 'Home', {controller: :welcome, action: :index} %>
-<h1>Impressum</h1>
+<%= link_to tr('home'), {controller: :welcome, action: :index} %>
+<h1><%= tr("impressum") %></h1>
 
 <p>
    Costa Rica Kids School Sponsorship Program<br>
@@ -12,4 +12,4 @@
 <a target="_blank" href="http://www.foursquare.ca/foursquare-kids.html">www.foursquare.ca/foursquare-kids.html</a><br>
 <a target="_blank" href="https://github.com/kpatrick/crk2">github.com/kpatrick/crk2</a></p>
 </p>
-<p>2015 December 16</p>
+<p>2015 December 24</p>
