--- a/app/views/welcome/login.html.erb
+++ b/app/views/welcome/login.html.erb
@@ -1,9 +1,10 @@
 <html>
 <%= form_tag(controller: "welcome", action: "login", method: "post") %>
-<h1>Login</h1>
-  <%= label_tag(:username, "Username:") %>
-  <%= text_field_tag(:username) %>
-  <%= label_tag(:password, "Password:") %>
-  <%= password_field_tag(:password) %>
-  <%= submit_tag("Submit") %>
+<h1><%= tr('login') %></h1>
+  <%= label_tag(:username, tr("username")) %>:
+  <%= text_field_tag(:username) %> <br>
+  <%= label_tag(:password, tr("password")) %>:
+  <%= password_field_tag(:password) %> <br>
+  <br>
+  <%= submit_tag(tr("submit")) %>
 </html>
