--- a/app/views/welcome/logout.html.erb
+++ b/app/views/welcome/logout.html.erb
@@ -1,2 +1,2 @@
-<%= link_to 'Home', {controller: :welcome, action: :index} %>
-<h1>Logout</h1>
+<%= link_to tr('home'), {controller: :welcome, action: :index} %>
+<h1><%= tr('logout') %></h1>
